# hospital-management-system

./: .gitignore  CMakeLists.txt  README.md  hms
data/: billing.csv  doctors.csv
include/: Appointment.h  Billing.h  CSVUtils.h  Doctor.h  Hospital.h  Patient.h  appointment.h
src/: Appointment.cpp  Billing.cpp  CSVUtils.cpp  Doctor.cpp  Hospital.cpp  Patient.cpp  main.cpp
